--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    Secret code is: #6055709
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   
