--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Secret value is 6055709
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Basics of HTML demo</title>
+    <link rel="text/stylesheet" href="styles.css">
+  </head>
+  
+  <body>
+    <p>Secret value is <b>7780971</b></p>
+    <p>You can solve the problem yourself at <a href="https://www.codeabbey.com/index/task_view/basics-of-html">CodeAbbey</a>.
+    <script src="main.js"></script>
+  </body>
+</html>
