--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <body>
     <p>Secret value is <b>3600011</b></p>
-    <p>You can solve the problem yourself at <a href="https://www.codeabbey.com/index/task_view/basics-of-html">CodeAbbey</a>.
+    <p>You can solve the problem yourself at <a href="http://www.codeabbey.com/index/task_view/basics-of-html">CodeAbbey</a>.
     <script src="main.js"></script>
   </body>
 </html>
